# data-workspace

./: .gitignore  LICENSE  README.md  alex.ipynb  assemble_result.ipynb  assemble_result_cleaned.ipynb  autoregressor.py  baseline_models.py  checks_Nikolai.ipynb  country_mappings.json  data.py  document_parsing.ipynb  document_parsing_Nikolai.ipynb  document_parsing_az.ipynb  eval.ipynb  eval.py  eval2.ipynb  eval2_naive.ipynb  eval3.ipynb  eval4.ipynb  eval_goy.ipynb  eval_parallel.ipynb  eval_parallel_1.ipynb  eval_parallel_2.ipynb  eval_parallel_3.ipynb  forecast_models.py  forecast_og_models.py  load_forecasting.py  load_forecasting_autoreg.py  load_forecasting_nikolai.py  load_forecasting_og.py  main.ipynb  main.py  my_data_og.py  nikolai.ipynb  passport_parsing.ipynb  profile.docx  pyproject.toml  requirements.txt  results.json  (+4 more)
bases/mousetrap/job_queue/: __init__.py  core.py
components/mousetrap/fetch_data/: core.py
components/mousetrap/run_fetch_worker/: __init__.py  core.py
deploy/: development.yml
development/: bending_spoons.ipynb  chronos.ipynb  gan_review.ipynb  llm_tutorial_1.ipynb  pytorch_review.ipynb
development/challenges/: cs285.ipynb  fishing3.ipynb  imc_prosperity.ipynb  ubs.ipynb
development/dl/: ex1.ipynb
development/g-research/: challenges_2023.ipynb
development/perception/: lecture_1.ipynb  tutorial_1a_xor_mlp.ipynb  tutorial_2a_eye_gaze.ipynb
notebooks/: document_parsing.ipynb
outputs/: students_results_HANGUK_ML_ES.csv
src/jb_onboarding/: constants.py  preprocessing.py  validator.py
src/jb_onboarding/checks/: check_account_form.py  check_age_consistency.py  check_education_background.py  check_family_background_consistency.py  check_occupation_history.py  check_passport.py  check_passport_consistency.py  check_profile.py  check_wealth_summary.py  cross_check_account_form_client_profile.py  cross_check_account_form_passport.py  cross_check_passport_client_profile_form.py
