[tool.poetry]
name = "data-workspace"
version = "0.1.0"
description = "python workspace for alpiq dev"
authors = ["Shyngys Aitkazinov <chikaphys9@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "models" }]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
matplotlib = "^3.8.3"
scipy = "^1.13.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
jupyterlab = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
isort = "^5.13.2"
pytest = "^8.0.0"


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# select = ["E", "F", "W", "Q", "UP", "I", "N"]
select = ["E", "F", "UP", "I"]
ignore = ["F401", "UP015", "F541"]

[tool.ruff.format]
quote-style = "double"       # Optional: enforce double quotes
indent-style = "space"       # Optional: use spaces instead of tabs

[tool.mypy]
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
