[project]
name = "ai-client-onboarding"
version = "0.1.0"
description = "Solution for onboarding clients with AI algorithm"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pydantic>=2.11.3",
    "python-docx>=1.1.2",
    "torch>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "ipykernel>=6.29.5"]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["F401", "UP015", "F541"]

[tool.ruff.format]
quote-style = "double" # Optional: enforce double quotes
indent-style = "space" # Optional: use spaces instead of tabs

[tool.mypy]
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
